<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

    <EditText
        android:id="@+id/titlein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:hint="@string/titlein"/>

    <EditText
        android:id="@+id/goalin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titlein"
        android:hint="@string/goalin"/>

    <EditText
        android:id="@+id/pledgein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/goalin"
        android:hint="@string/pledgein"/>

    <EditText
        android:id="@+id/descriptionin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/pledgein"
        android:layout_above="@+id/launchcamp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:hint="@string/descriptionin"/>

    <Button
        android:id="@+id/launchcamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/launchcamp"/>
</RelativeLayout>